--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Hello, world!</title>
+    <title>BLA</title>
   </head>
   <body>
     <h1>Hello, world!</h1>
