--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Learn More</h2>
-                    <h3 class="section-subheading text-muted"> BLASTBioinformatics is an initiative intented to introduce bioinformatics to highschool students. We have developed a series of workshops </h3>
+                    <h3 class="section-subheading text-muted"> BLASTBioinformatics is an initiative intented to engage highschool students into the field of bioinformatics. We have developed a series of workshops to introduce various concepts in bioinformatics to provide a wholeistic overview of the field. </h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -245,7 +245,7 @@
                     <div class="col-lg-3">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                            <h4>Emanuel Wong</h4>
+                            <h4>Emmanuel Wong</h4>
                             <p class="text-muted">Lead Developer</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
@@ -364,7 +364,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2021</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; BLASTBioinformatics 2021</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
