--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Learn More</h2>
-                    <h3 class="section-subheading text-muted"> BLASTBioinformatics is an initiative intented to engage highschool students into the field of bioinformatics. We have developed a series of workshops to introduce various concepts in bioinformatics to provide a wholeistic overview of the field. </h3>
+                    <h3 class="section-subheading text-muted"> BLASTBioinformatics is an initiative intented to engage highschool students into the field of bioinformatics. We have developed a series of workshops to introduce various fundamental concepts in bioinformatics to provide an overview of the field. In general, bioinformatics can be considered a scientific discipline focused on solving complex biological problems by utilizing computational capabilities.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -53,24 +53,24 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-dna fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Genomics</h4>
+                        <p class="text-muted">Unlocking mysteries within our DNA sequences</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Computation</h4>
+                        <p class="text-muted">Using computational advancements to solve biological problems</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-microscope fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Scientific Inquiry</h4>
+                        <p class="text-muted">Asking and solving complex biological problems.</p>
                     </div>
                 </div>
             </div>
