--- a/index.html
+++ b/index.html
@@ -89,18 +89,20 @@
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
-                    <div class="col-xl-1">
-                        <!-- Portfolio item 1-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
+                    <div class="row text-center">
+                        <div class="col-xl-1">
+                            <!-- Portfolio item 1-->
+                            <div class="portfolio-item">
+                                <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                       
-                                <img class="img-fluid" src="assets/img/portfolio/promotional_poster_mst-1.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                    <img class="img-fluid" src="assets/img/portfolio/promotional_poster_mst-1.jpg" alt="..." />
+                                </a>
+                                <div class="portfolio-caption">
+                                    <div class="portfolio-caption-heading">Threads</div>
+                                    <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                </div>
                             </div>
-                        </div>
+                       </div>
                     </div>
                     <div class="col-xl-1">
                         <!-- Portfolio item 2-->
