--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Sign Up</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">We are currently accepting participants for January 2022!</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-sm-10 mb-4">
@@ -97,8 +97,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/promotional_poster_mst-1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">Promotional Poster</div>
+                                <div class="portfolio-caption-subheading text-muted">Information poster on workshop</div>
                             </div>
                         </div>
                     </div>
@@ -109,8 +109,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/sign_up_code.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-heading">Sign Up</div>
+                                <div class="portfolio-caption-subheading text-muted">Scan the QR code to sign up today!</div>
                             </div>
                         </div>
                     </div>
