--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <ul class="timeline">
                     
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/d41586-021-01506-w_19225050.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/genomics.png" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>January 27, 2022</h4>
