--- a/index.html
+++ b/index.html
@@ -371,23 +371,14 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Promotional Poster</h2>
+ 
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/promotional_poster_mst-1.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Threads
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Illustration
-                                        </li>
-                                    </ul>
+                                    <p>Promotional Poster for the our January 2022 session. To learn more about the topics covered within the workshop, feel free to checkout the "workshops" section or contact the team to get more details.</p>
+                                    
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
-                                        Close Project
+                                        Close
                                     </button>
                                 </div>
                             </div>
@@ -406,10 +397,10 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Sign Up</h2>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/sign_up_code.png" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Sign up today by scanning the QR code! You can also sign up by clicking on this <a href="https://docs.google.com/forms/d/1y1KZylpNAxyn8nAm7E2jFCNNMs4e4LLkILFm6_zHd3s/viewform?edit_requested=true">link</a>.</p>
+                                    
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
