--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/erin.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/erin-2.jpg" alt="..." />
                             <h4>Erin Brintnell</h4>
                             <p class="text-muted">MSc Candidate at Western University</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
