--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/ubc.png" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/neera.png" alt="..." />
                             <h4>Neera Patadia</h4>
                             <p class="text-muted">MSc Candidate at University of British Columbia</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
