--- a/index.html
+++ b/index.html
@@ -199,11 +199,13 @@
                        <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
+                                <a class="nav-link" href="#about"> 
                                 Sign up
                                 <br />
                                  For
                                 <br />
                                 2022!
+                                    </a>
                             </h4>
                         </div>
                     </li>
