--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                        <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                <a href="#about"> 
+                                <a class="btn btn-primary btn-xl" href="#about"> 
                                 Sign up
                                 <br />
                                  For
