--- a/index.html
+++ b/index.html
@@ -199,13 +199,13 @@
                        <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                <a class="btn btn-primary btn-xl" href="#about"> 
+                                <a class="btn btn-primary btn-lg" href="#about"> 
                                 Sign up
                                 <br />
                                  For
                                 <br />
                                 2022!
-                                    </a>
+                                </a>
                             </h4>
                         </div>
                     </li>
