--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         </div>
                     </li>
                     
-                    <li>
+                    <li class = "timeline">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
