--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     </li>
                     
                 
-                    <li>
+                    <li class = "timeline">
                             <h4>
                                 <a class="btn btn-primary btn-xl" href="#about"> 
                                 Sign up
